@@ -35,6 +35,7 @@ ikiwiki (2.66) UNRELEASED; urgency=low
   * inline: Fix handling of rootpage that doesn't exist.
   * attachment: Support adding attachments to pages even as they are being
     created.
+  * remove, rename: Allow acting on attachments as a page is being created.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 25 Sep 2008 13:45:55 -0400
 
